--- a/src/plugins/slick-1.8.1/index.html
+++ b/src/plugins/slick-1.8.1/index.html
@@ -315,28 +315,28 @@
       $(".vertical-center-4").slick({
         dots: true,
         vertical: true,
-        centerMode: true,
+        centermods: true,
         slidesToShow: 4,
         slidesToScroll: 2
       });
       $(".vertical-center-3").slick({
         dots: true,
         vertical: true,
-        centerMode: true,
+        centermods: true,
         slidesToShow: 3,
         slidesToScroll: 3
       });
       $(".vertical-center-2").slick({
         dots: true,
         vertical: true,
-        centerMode: true,
+        centermods: true,
         slidesToShow: 2,
         slidesToScroll: 2
       });
       $(".vertical-center").slick({
         dots: true,
         vertical: true,
-        centerMode: true,
+        centermods: true,
       });
       $(".vertical").slick({
         dots: true,
@@ -353,7 +353,7 @@
       $(".center").slick({
         dots: true,
         infinite: true,
-        centerMode: true,
+        centermods: true,
         slidesToShow: 5,
         slidesToScroll: 3
       });
