--- a/src/plugins/slick-1.8.1/index.html
+++ b/src/plugins/slick-1.8.1/index.html
@@ -309,34 +309,34 @@
   </section>
 
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-  <script src="slick/slick.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./slick/slick.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript">
     $(document).on('ready', function() {
       $(".vertical-center-4").slick({
         dots: true,
         vertical: true,
-        centermods: true,
+        centerMode: true,
         slidesToShow: 4,
         slidesToScroll: 2
       });
       $(".vertical-center-3").slick({
         dots: true,
         vertical: true,
-        centermods: true,
+        centerMode: true,
         slidesToShow: 3,
         slidesToScroll: 3
       });
       $(".vertical-center-2").slick({
         dots: true,
         vertical: true,
-        centermods: true,
+        centerMode: true,
         slidesToShow: 2,
         slidesToScroll: 2
       });
       $(".vertical-center").slick({
         dots: true,
         vertical: true,
-        centermods: true,
+        centerMode: true,
       });
       $(".vertical").slick({
         dots: true,
@@ -353,7 +353,7 @@
       $(".center").slick({
         dots: true,
         infinite: true,
-        centermods: true,
+        centerMode: true,
         slidesToShow: 5,
         slidesToScroll: 3
       });
